[package]
name = "beltpack-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
ssd1306 = "0.8.3"
u8g2-fonts = { version = "0.3.0" }
tokio = { version = "1.32.0", features = ["full"] }
async-std = "1.12.0"
tokio-wifiscanner = "0.2.1"
wifiscanner = "0.5.1"
local-ip-address = "0.5.5"
configparser = "3.0.2"
linux-embedded-hal = { version = "0.3.2", features = ["gpio_cdev"] }
gpio-cdev = "0.6.0"
